<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="40sp"
        android:textColor="@color/orange"
        android:fontFamily="@font/crete_round"
        android:layout_margin="24dp"

        />


    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:lottie_rawRes="@raw/introo"
        app:lottie_loop="true"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        />

    <TextView
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="cursive"
        android:text="@string/welcome_note"
        android:textColor="@color/black"
        android:textSize="40sp"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shaper"
        android:fontFamily="@font/crete_round"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_margin="16dp"
        />

</LinearLayout>